# roguelike-engine

./: .gitignore  CMakeLists.txt  DungeonMap.cpp  DungeonMap.h  GameGraphics.cpp  GameGraphics.h  GameWindow.cpp  GameWindow.h  README.md  Tests.cpp  WinMain.cpp  pch.h
error_handling/: FileHandling.cpp  WindowsErrorHandling.cpp  WindowsErrorHandling.h  WindowsErrorHandlingTest.cpp
graphics/: GameGraphics.cpp  GameGraphics.h  RenderingTarget.cpp  RenderingTarget.h  Shader.cpp  Shader.h  Vertices.cpp  Vertices.h
testfiles/: shaders.shader  syntax_error.shader
tests/: ShaderTest.cpp  Tests.cpp  WindowsErrorHandlingTest.cpp
tests/testfiles/: shaders.shader
tests/utils/: WindowsErrorHandlingTest.cpp
utils/: FileHandling.h  WindowsErrorHandling.cpp  WindowsErrorHandling.h  WindowsErrorHandlingTest.cpp  WindowsTest.cpp  WindowsTest.h
